// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Renders the UI snapshot correctly 1`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-1xdhyk6"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-1xdhyk6"
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        aria-atomic={false}
        className="css-xy0wy2"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
      >
        <div
          className="css-0"
          dangerouslySetInnerHTML={
            {
              "__html": "Caption",
            }
          }
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 3`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-1xdhyk6"
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        aria-atomic={false}
        className="css-xy0wy2"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
      >
        <div
          className="css-0"
          dangerouslySetInnerHTML={
            {
              "__html": "Credit",
            }
          }
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 4`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-1xdhyk6"
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        aria-atomic={false}
        className="css-xy0wy2"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
      >
        <div
          className="css-0"
          dangerouslySetInnerHTML={
            {
              "__html": "Caption",
            }
          }
        />
      </div>
      <div
        aria-atomic={false}
        className="css-xy0wy2"
        data-isinvalid={false}
        data-testid="ds-helperErrorText"
      >
        <div
          className="css-0"
          dangerouslySetInnerHTML={
            {
              "__html": "Credit",
            }
          }
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 5`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-1xdhyk6"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 6`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-1xdhyk6"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 7`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-1xdhyk6"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 8`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-1xdhyk6"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 9`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-1xdhyk6"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 10`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-1xdhyk6"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 11`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-6n2uy8"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-m52qfj"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 12`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-fp4s7x"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-rwvwz0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 13`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-xfxtr7"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-1hjmh7x"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 14`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-2kayve"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-s8skks"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 15`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-ca2ypk"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 16`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-5r8zvy"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-15psnkv"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 17`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-12nxalf"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-1vi2e38"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 18`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-1atfqya"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-3lyhl6"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 19`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-vy443d"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-ztbuvv"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 20`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-3hzznc"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-2deslp"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 21`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <div
    className="the-wrap css-12nxalf"
    data-testid="ds-imageWrapper"
    id={null}
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-1vi2e38"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 22`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-16h1ce8"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 23`] = `
<div
  className="css-0"
  data-testid="ds-image"
>
  <img
    alt=""
    className="css-1xdhyk6"
    data-testid="image"
    src="test.png"
  />
</div>
`;
